Fixed images for each webpage.

--- a/Compost.html
+++ b/Compost.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <p style="font-size: 30px">Throw this into a compost bin, pictured below:</p>
-    <img src="Training%20Images/Composte%20Bin/green_bin.png" alt="Compost Bin">
+    <img src="Bin%20Classifier/Training%20Images/Composte%20Bin/green_bin.png" alt="Compost Bin">
 </body>
 </html>
