--- a/Containers.html
+++ b/Containers.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p style="font-size: 30px">Throw this into a mixed containers bin, pictured below:</p>
-<img src="Training%20Images/Containers/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Containers Bin">
+<img src="Bin%20Classifier/Training%20Images/Containers/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Containers Bin">
 </body>
 </html>
