--- a/Garbage.html
+++ b/Garbage.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p style="font-size: 30px">Throw this into a garbage bin, pictured below:</p>
-<img src="Training%20Images/Regular%20Garbage/61w0i-JNKcL._AC._SR360,460.jpg" alt="Garbage Bin">
+<img src="Bin%20Classifier/Training%20Images/Regular%20Garbage/61w0i-JNKcL._AC._SR360,460.jpg" alt="Garbage Bin">
 </body>
 </html>
