--- a/MixedPaper.html
+++ b/MixedPaper.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p style="font-size: 30px">Throw this into a mixed paper bin, pictured below:</p>
-<img src="Training%20Images/Mixed%20Paper/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Paper Bin">
+<img src="Bin%20Classifier/Training%20Images/Mixed%20Paper/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Paper Bin">
 </body>
 </html>
