--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Compost</title>
 </head>
 <body>
-    <img src="Bin%20Classifier/Training%20Images/Compost%20Bin/green_bin.png" alt="Compost Bin">
+    <img src="" alt="">
+    <img class="bin" src="Bin%20Classifier/Training%20Images/Compost%20Bin/green_bin.png" alt="Compost Bin">
     <p class="text">Dispose your item in the Compost Bin, as shown above.</p>
 </body>
 </html>
