--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Compost</title>
 </head>
 <body>
+    <h1>SMART RECYCLING</h1>
     <img src="" alt="">
     <img class="bin" src="Bin%20Classifier/Training%20Images/Compost%20Bin/green_bin.png" alt="Compost Bin">
     <p class="text">Dispose your item in the Compost Bin, as shown above.</p>
