--- a/paper.html
+++ b/paper.html
@@ -8,7 +8,7 @@
 <body>
     <h1>SMART RECYCLING</h1>
     <img src="" alt="">
-    <img src="Bin%20Classifier/Training%20Images/Recycling%20Bin/142504b0-f053-4c4a-9cf1-392e29ebef9f.jpg" alt="Recycling Bin">
-    <p class="text">Dispose your item in the Recycling Bin, as shown above.</p>
+    <img src="Bin%20Classifier/Training%20Images/Mixed%20Paper/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Paper Bin">
+    <p class="text">Dispose your item in the Mixed Paper Bin, as shown above.</p>
 </body>
 </html>
