--- a/Containers.html
+++ b/Containers.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Compost</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Mixed Containers</title>
 </head>
 <body>
-<p style="font-size: 30px">Throw this into a mixed containers bin, pictured below:</p>
-<img src="Bin%20Classifier/Training%20Images/Containers/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Containers Bin">
+    <h1>SMART RECYCLING</h1>
+    <img src="" alt="">
+    <img src="Bin%20Classifier/Training%20Images/Containers/ezgif.com-gif-maker%20(5).jpg" alt="Mixed Containers Bin">
+    <p class="text">Dispose your item in the Mixed Containers Bin, as shown above.</p>
 </body>
 </html>
+
