--- a/Garbage.html
+++ b/Garbage.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Garbage</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Compost</title>
 </head>
 <body>
-<p style="font-size: 30px">Throw this into a garbage bin, pictured below:</p>
-<img src="Bin%20Classifier/Training%20Images/Regular%20Garbage/61w0i-JNKcL._AC._SR360,460.jpg" alt="Garbage Bin">
+    <h1>SMART RECYCLING</h1>
+    <img src="" alt="">
+    <img src="Bin%20Classifier/Training%20Images/Regular%20Garbage/61w0i-JNKcL._AC._SR360,460.jpg" alt="Garbage Bin">
+    <p class="text">Dispose your item in the Garbage Bin, as shown above.</p>
 </body>
 </html>
